--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
     <div id="scriptArea" contenteditable="true" spellcheck="false">
         <p>在这里粘贴或输入你的讲稿...</p>
         <p>把这段文字替换成你自己的内容。</p>
-        <p>新功能：</p>
-        <p>1. 你现在可以直接拖动文字来滚动。</p>
-        <p>2. 你可以设置横向滚动。</p>
-        <p>3. 你可以设置文字居中。</p>
     </div>
     
-    <button id="exitFullscreenButton" title="退出全屏">X</button>
+    <div id="fullscreenControls">
+        <button id="fullscreenPlayPauseButton" title="播放/暂停">播放</button>
+        <button id="fullscreenExitButton" title="退出全屏">X</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
