--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>我的提词器</title>
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style.css?v=1.2">
 </head>
 <body>
 
@@ -29,8 +29,8 @@
             <span>字体:</span>
             <select id="fontSelector">
                 <option value="sans-serif">默认(黑体)</option>
-                <option value="'Songti SC', 'Times New Roman', serif">宋体</option>
-                <option value="'Kaiti SC', 'KaiTi', serif">楷体</option>
+                <option value="'Songti SC', 'STSongti-SC-Regular', 'STSong', 'Times New Roman', serif">宋体</option>
+                <option value="'Kaiti SC', 'STKaiti-SC-Regular', 'STKaiti', 'KaiTi', serif">楷体</option>
                 <option value="monospace">等宽</option>
             </select>
         </div>
@@ -72,6 +72,6 @@
         <button id="fullscreenExitButton" title="退出全屏">X</button>
     </div>
 
-    <script src="script.js?v=1.1"></script>
+    <script src="script.js?v=1.2"></script>
 </body>
 </html>
